# simpe_compiler

./: CMakeLists.txt  main.c  test
includes/: common.h  hashtable.h  lexem_analyser.h  list.h  syntax_analyser.h  translator.h  tree.h
libs/: common.c  hashtable.c  lexem_analyser.c  list.c  syntax_analyser.c  translator.c  tree.c
